--- a/kontakt.html
+++ b/kontakt.html
@@ -1,11 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand"><img src="bamazon.png" width="80vh"></a>
+        <a class="navbar-brand" href="index.html">Hem</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Produkter
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#hoover">Hoovers</a>
+                        <a class="dropdown-item" href="#dyson">Dyson</a>
+                        <a class="dropdown-item" href="#flakt">Fläktar</a>
+                        <a class="dropdown-item" href="#mikro">Mikrovågsugnar</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Tjänster
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="tjänster.html">Rengöring</a>
+                        <a class="dropdown-item" href="tjänster.html">Tvätt</a>
+                        <a class="dropdown-item" href="tjänster.html">Lagring</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kontakt.html">Kontakt</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div id="carouselControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./Images/nedladdning.png" class="d-block w-100">
+                <h1 class="centered" style="color: rgb(252, 244, 244);">VD över Bamazon</h1>
+            </div>
+            <div class="carousel-item">
+                <img src="./Images/man.jpg" class="d-block w-100">
+                <h1 class="centered">Revisor</h1>
+            </div>
+            <div class="carousel-item">
+                <img src="./Images/woman.jpg" class="d-block w-100">
+                <h1 class="centered">PR-chef</h1>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Föregående</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Nästa</span>
+        </a>
+    </div>
+
+    <section class="mb-4">
+
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Kontakta oss!</h2>
+        <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så är det
+            bara att skicka ett meddelande.
+        </p>
+        <div class="d-flex justify-content-center">
+            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+                <div class="row">
+
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <input type="text" name="name" class="form-control">
+                            <label for="name" class="">Ditt namn</label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="md-form mb-0">
+                            <input type="text"  name="email" class="form-control">
+                            <label for="email" class="">Din email</label>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="md-form mb-0">
+                            <input type="text" name="subject" class="form-control">
+                            <label for="subject" class="">Ämne</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="md-form">
+                            <textarea type="text" name="message" rows="2"
+                                class="form-control md-textarea"></textarea>
+                            <label for="message">Ditt meddelande</label>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="text-center text-md-left" >
+                    <a class="btn btn-primary" data-toggle="modal" data-target="#modal">Skicka</a>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalLabel">Skickat!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Ditt meddeland har skickats. Vänligen vänta upp till 1 arbetsdag för svar.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="container py-5">
+        <div class="row">
+          <div class="col-12 col-md">
+            <img src="bamazon.png" width="80vh">
+            <small class="d-block mb-3 text-muted">© 2020</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Integritet</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Resurser</a></li>
+              <li><a class="text-muted" href="#">Policy</a></li>
+              <li><a class="text-muted" href="#">GDPR</a></li>
+              <li><a class="text-muted" href="#">PUL</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Betalinformation</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Regler</a></li>
+              <li><a class="text-muted" href="#">EULA</a></li>
+              <li><a class="text-muted" href="#">Övrigt</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Om oss</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Kontakt</a></li>
+              <li><a class="text-muted" href="#">Personal</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="bootstrap.js"></script>
+<script src="bootstrap.bundle.js"></script>
+
 </html>
