Lade till formatering och tjänster.

--- a/kontakt.html
+++ b/kontakt.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bamazon</title>
 
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="main.css">
@@ -78,7 +78,8 @@
     <section class="mb-4">
 
         <h2 class="h1-responsive font-weight-bold text-center my-4">Kontakta oss!</h2>
-        <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så är det
+        <p class="text-center w-responsive mx-auto mb-5">Ifall du har några frågor om företaget eller våra produkter så
+            är det
             bara att skicka ett meddelande.
         </p>
         <div class="d-flex justify-content-center">
@@ -94,7 +95,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text"  name="email" class="form-control">
+                            <input type="text" name="email" class="form-control">
                             <label for="email" class="">Din email</label>
                         </div>
                     </div>
@@ -111,14 +112,13 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="md-form">
-                            <textarea type="text" name="message" rows="2"
-                                class="form-control md-textarea"></textarea>
+                            <textarea type="text" name="message" rows="2" class="form-control md-textarea"></textarea>
                             <label for="message">Ditt meddelande</label>
                         </div>
 
                     </div>
                 </div>
-                <div class="text-center text-md-left" >
+                <div class="text-center text-md-left">
                     <a class="btn btn-primary" data-toggle="modal" data-target="#modal">Skicka</a>
                 </div>
             </form>
@@ -127,55 +127,55 @@
 
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="modalLabel">Skickat!</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Skickat!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Ditt meddeland har skickats. Vänligen vänta upp till 1 arbetsdag för svar.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+                </div>
             </div>
-            <div class="modal-body">
-              Ditt meddeland har skickats. Vänligen vänta upp till 1 arbetsdag för svar.
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-      <footer class="container py-5">
+    <footer class="container py-5">
         <div class="row">
-          <div class="col-12 col-md">
-            <img src="bamazon.png" width="80vh">
-            <small class="d-block mb-3 text-muted">© 2020</small>
-          </div>
-          <div class="col-6 col-md">
-            <h5>Integritet</h5>
-            <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Resurser</a></li>
-              <li><a class="text-muted" href="#">Policy</a></li>
-              <li><a class="text-muted" href="#">GDPR</a></li>
-              <li><a class="text-muted" href="#">PUL</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-md">
-            <h5>Betalinformation</h5>
-            <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Regler</a></li>
-              <li><a class="text-muted" href="#">EULA</a></li>
-              <li><a class="text-muted" href="#">Övrigt</a></li>
-            </ul>
-          </div>
-          <div class="col-6 col-md">
-            <h5>Om oss</h5>
-            <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Kontakt</a></li>
-              <li><a class="text-muted" href="#">Personal</a></li>
-            </ul>
-          </div>
+            <div class="col-12 col-md">
+                <img src="bamazon.png" width="80vh">
+                <small class="d-block mb-3 text-muted">© 2020</small>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Integritet</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Resurser</a></li>
+                    <li><a class="text-muted" href="#">Policy</a></li>
+                    <li><a class="text-muted" href="#">GDPR</a></li>
+                    <li><a class="text-muted" href="#">PUL</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Betalinformation</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Regler</a></li>
+                    <li><a class="text-muted" href="#">EULA</a></li>
+                    <li><a class="text-muted" href="#">Övrigt</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Om oss</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Kontakt</a></li>
+                    <li><a class="text-muted" href="#">Personal</a></li>
+                </ul>
+            </div>
         </div>
-      </footer>
+    </footer>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
