--- a/tjänster.html
+++ b/tjänster.html
@@ -1,11 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bamazon</title>
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand"><img src="bamazon.png" width="80vh"></a>
+        <a class="navbar-brand" href="index.html">Hem</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Produkter
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#hoover">Hoovers</a>
+                        <a class="dropdown-item" href="#dyson">Dyson</a>
+                        <a class="dropdown-item" href="#flakt">Fläktar</a>
+                        <a class="dropdown-item" href="#mikro">Mikrovågsugnar</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Tjänster
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="tjänster.html">Rengöring</a>
+                        <a class="dropdown-item" href="tjänster.html">Tvätt</a>
+                        <a class="dropdown-item" href="tjänster.html">Lagring</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kontakt.html">Kontakt</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="card card-image" style="background-image: url(./Images/background.jpg);">
+
+        <div class="rgba-black-strong py-5 px-4">
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-10 col-xl-8">
+
+                    <div class="accordion md-accordion accordion-5" id="accordionEx5" role="tablist"
+                        aria-multiselectable="true">
+
+                        <div class="card mb-4">
+
+                            <div class="card-header p-0 z-depth-1" role="tab" id="heading">
+                                <a class="tagStyle" data-toggle="collapse" data-parent="#accordionEx5" href="#collapse"
+                                    aria-expanded="true" aria-controls="collapse">
+                                    <i class="fas fa-cloud fa-2x p-3 mr-4 float-left black-text" aria-hidden="true"></i>
+                                    <h4 class="mb-0 py-3 mt-1">
+                                        Rengöring
+                                    </h4>
+                                </a>
+                            </div>
+
+                            <div id="collapse" class="collapse show" role="tabpanel" aria-labelledby="heading"
+                                data-parent="#accordionEx5">
+                                <div class="card-body rgba-black-light white-text z-depth-1">
+                                    <p class="p-md-4 mb-0">”Ett rent och välstädat hem är en fröjd för själen” <br><br>
+
+                                        Vid en hemstädning torkar vi av alla köksluckor, bänkar och kakel. Vi torkar ur
+                                        mikrovågsugnen och städar brödrosten om den står framme. Vi städar inte inne i
+                                        skåpen om du inte speciellt bett om det. Vi städar dusch, badkar, handfat,
+                                        toalett, bänkar, kakel, skåpluckor och speglar i badrummet. Vi dammar alla ytor,
+                                        tar ut småmattor, dammsuger och våttorkar alla golv.
+                                        <br><br>
+                                        Om tiden räcker så kan vi ta fram soffor och dammsuga under och bakom. Vi torkar
+                                        lister, karmar, dörrar och i sopskåpet emellanåt.
+                                        <br><br>
+                                        Vill du ha städat på något annat sätt så gör vi det.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-4">
+
+                            <div class="card-header p-0 z-depth-1" role="tab" id="heading2">
+                                <a data-toggle="collapse" data-parent="#accordionEx5" href="#collapse2"
+                                    aria-expanded="true" aria-controls="collapse2">
+                                    <i class="fas fa-comment-alt fa-2x p-3 mr-4 float-left black-text"
+                                        aria-hidden="true"></i>
+                                    <h4 class="mb-0 py-3 mt-1">
+                                        Tvättning
+                                    </h4>
+                                </a>
+                            </div>
+
+                            <div id="collapse2" class="collapse" role="tabpanel" aria-labelledby="heading2"
+                                data-parent="#accordionEx5">
+                                <div class="card-body rgba-black-light white-text z-depth-1">
+                                    <p class=" mb-0">
+                                        Vi tvättar:
+                                    <ul>
+                                        <li>Kostymer</li>
+                                        <li>Klänningar</li>
+                                        <li>Soffklädsel</li>
+                                        <li>Jackor</li>
+                                        <li>Kappor</li>
+                                        <li>Brudklänningar</li>
+                                        <li>Etc.</li>
+                                    </ul>
+
+                                    System HiGloo är ett miljöanpassat och säkert
+                                    tvättsystem som inte har några negativa effekter på vare sig luft, vatten, mark
+                                    eller människor.
+                                    Textilierna blir mjuka och får en behaglig doft.
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card mb-4">
+
+                            <div class="card-header p-0 z-depth-1" role="tab" id="heading3">
+                                <a data-toggle="collapse" data-parent="#accordionEx5" href="#collapse3"
+                                    aria-expanded="true" aria-controls="collapse3">
+                                    <i class="fas fa-cogs fa-2x p-3 mr-4 float-left black-text" aria-hidden="true"></i>
+                                    <h4 class="mb-0 py-3 mt-1">
+                                        Lagring
+                                    </h4>
+                                </a>
+                            </div>
+
+                            <div id="collapse3" class="collapse" role="tabpanel" aria-labelledby="heading3"
+                                data-parent="#accordionEx5">
+                                <div class="card-body rgba-black-light white-text z-depth-1">
+                                    <p class="mb-0">Får dina ägodelar dig att känna dig trångbodd? Håller dina prylar på
+                                        att ta över? Om svaret är ja, behöver du rensa ut hemma.
+                                        <br><br>
+                                        Men detta behöver inte vara besvärligt om du magasinerar. Magasinering ger dig
+                                        en säker plats där du kan lagra dina saker så länge du behöver.
+                                        <br><br>
+                                    <h4>Varför rensa ut hemma?</h4>
+
+                                    <ul>
+                                        <li><b>Du drunknar bland dina saker:</b> Har du brist på utrymme eftersom du
+                                            omges av saker du för närvarande inte använder? Magasinera dem så kommer du
+                                            att känna en börda lyftas från dina axlar. </li>
+                                        <li><b>Du går i säljtankar:</b> Du kanske vill rensa ut bland sakerna så att
+                                            spekulanterna ser ditt hem från dess bästa sida? Om du får rummen att kännas
+                                            rymligare genom att rensa ut och magasinera, kan det snabba på
+                                            försäljningen. </li>
+                                        <li><b>Du flyttar till något mindre:</b> Du vill flytta till något mindre men
+                                            finner tanken på att göra dig av med gamla släktklenoder outhärdlig? Du
+                                            behöver inte skiljas från något du egentligen vill behålla om du magasinerar
+                                            dina saker.</li>
+                                    </ul>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="container py-5">
+        <div class="row">
+            <div class="col-12 col-md">
+                <img src="bamazon.png" width="80vh">
+                <small class="d-block mb-3 text-muted">© 2020</small>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Integritet</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Resurser</a></li>
+                    <li><a class="text-muted" href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Policy</a></li>
+                    <li><a class="text-muted" href="https://www.youtube.com/watch?v=oHg5SJYRHA0">GDPR</a></li>
+                    <li><a class="text-muted" href="https://www.youtube.com/watch?v=oHg5SJYRHA0">PUL</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Betalinformation</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Regler</a></li>
+                    <li><a class="text-muted" href="https://www.youtube.com/watch?v=oHg5SJYRHA0">EULA</a></li>
+                    <li><a class="text-muted" href="https://www.youtube.com/watch?v=oHg5SJYRHA0">Övrigt</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5>Om oss</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="kontakt.html">Kontakt</a></li>
+                    <li><a class="text-muted" href="kontakt.html">Personal</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+<script src="bootstrap.js"></script>
+<script src="bootstrap.bundle.js"></script>
+
 </html>
